finish migration from prev studbud

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <nav class="sidenav">
       <ul>
         <li><a href="index.html"><img src="images/SelectedKanbanboardIcon.png" alt=""></a></li>
-        <!-- <li><a href="./pages/workspace/workspace.html"><img src="images/WorkspaceIcon.png" alt=""></a></li> -->
-        <!-- <li><a href="./pages/flashcard/flashcard.html"><img src="images/FlashcardIcon.png" alt=""></a></li> -->
+        <li><a href="./pages/workspace/workspace.html"><img src="images/WorkspaceIcon.png" alt=""></a></li>
+        <li><a href="./pages/flashcard/flashcard.html"><img src="images/FlashcardIcon.png" alt=""></a></li>
       </ul>
     </nav>
   
@@ -109,9 +109,8 @@
     </main>
   
     
-    <!-- <script src="script.js"></script> -->
-    <!-- <script src="./pages/kanban/kanban.js" type="module"></script> -->
-
+    <script src="script.js"></script>
+    <script src="./pages/kanban/kanban.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     
   </body>
