--- a/public/pages/flashcard/flashcard.html
+++ b/public/pages/flashcard/flashcard.html
@@ -33,7 +33,7 @@
 
     <div class="flashcard-section">
       <div class="add-task-container">
-        <h5 contenteditable="">Criminal Law</h5>
+        <h5 contenteditable>Criminal Law</h5>
         <button class="btn btn-primary" id="add-flashcard"> + Flashcard </button>
       </div>
       <div class="accordion" id="accordion-container">
