taskcard load function complete

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
           <div class="column-heading">
             <h3 class="column-title">Column Template</h3>
           </div>
-          <div id="tasklist">
+          <div class="taskList" id="taskList">
           </div>
         </div>
       </div>
