--- a/public/index.html
+++ b/public/index.html
@@ -113,10 +113,11 @@
 
      <section class="row" id="kanban">
       
-      <div class="col-md-4" id="column-template">
+      <div class="col-md-4 hidden" id="column-template">
         <div class="box kanban_column">
           <div class="column-heading">
             <h3 class="column-title">Column Template</h3>
+            <button type="button" class="btn btn-secondary" id="delete-col">Delete</button>
           </div>
           <div class="taskList" id="taskList">
           </div>
