added delete task function

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,10 @@
 
       <!-- Taskcard Template-->
       <div class="task-card hidden draggable" id="task-card-template" draggable="true">
-        <p><strong class="task-name">Task Name</strong></p>
+        <div class="taskcard-heading">
+          <p><strong class="task-name">Task Name</strong></p>
+          <button class="delete-taskcard-btn" id="delete-task"><img src="images/bin.png" alt=""></button>
+        </div>
         <div class="content-information">
           <div class="task-tag green"><p><small class="task-class-name">LAW1023</small></p></div>
           <div class="task-tag red"><p><small class="task-priority">High</small></p></div>
