uninstalled moment.js

--- a/public/index.html
+++ b/public/index.html
@@ -111,8 +111,8 @@
         </div>
       </div>
 
-     <section class="row" id="kanban">
 
+     <section class="row" id="kanban">
       <!-- Kanban Column Template-->
       <div class="col-md-4 hidden" id="column-template">
         <div class="box kanban_column">
@@ -138,7 +138,7 @@
         <div class="time-information">
           <span>
             <img src="images/clock.png" alt="clock icon" class="clock-icon">
-            <p class="estimated-completion-time">2</p><p>minutes</p>
+            <p class="estimated-completion-time"></p><p>minutes</p>
           </span>
           <p class="task-due-date"></p>
         </div>
