--- a/public/pages/workspace/workspace.html
+++ b/public/pages/workspace/workspace.html
@@ -27,7 +27,7 @@
     <h1>Workspace</h1>
   </header>
 
-  <main>
+  <main class="page-content">
       <section class="row">
         
         <!-- Kanban Progress Column-->
@@ -97,7 +97,7 @@
               </div>
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link">Pomodoro Timer</a></li>
+                  <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
                   <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
                   <li><a href="#" class="settings-link">Settings </a></li>
                 </ul>
@@ -114,7 +114,7 @@
               </div>
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link">Pomodoro Timer</a></li>
+                  <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
                   <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
                   <li><a href="#" class="settings-link">Settings </a></li>
                 </ul>
@@ -133,7 +133,7 @@
                       <p>120 min</p>
                     </span>
                   </div>
-                  <div class="display-box" id="work-duration-value">25</div>
+                  <div class="display-box" id="work-duration-value">25</div><p>minutes</p>
                 </div>
                 <div class="setting-component">
                   <div>
@@ -144,7 +144,7 @@
                       <p>45 min</p>
                     </span>
                   </div>
-                  <div class="display-box" id="break-duration-value">5</div>
+                  <div class="display-box" id="break-duration-value">5</div><p>minutes</p>
                 </div>
                 <div class="setting-component">
                   <div>
@@ -155,12 +155,12 @@
                       <p>12</p>
                     </span>
                   </div>
-                  <div class="display-box" id="number-of-sessions-value">4</div>
+                  <div class="display-box" id="number-of-sessions-value">4</div><p>sessions</p>
                 </div>
               </div>
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link">Pomodoro Timer</a></li>
+                  <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
                   <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
                   <li><a href="#" class="settings-link">Settings </a></li>
                 </ul>
@@ -232,7 +232,7 @@
       </section>
   </main>
 
-  <script src="../kanban/kanban.js"></script>
+  <script src="../kanban/kanban.js" type="module"></script>
   <script src="workspace.js"></script>
   <script src="./musicplayer.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
