read me project description written

--- a/public/pages/workspace/workspace.html
+++ b/public/pages/workspace/workspace.html
@@ -105,7 +105,7 @@
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
+                  <li><a href="#" class="pomodoro-link active">Pomodoro</a></li>
                   <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
                   <li><a href="#" class="settings-link">Settings </a></li>
                 </ul>
@@ -126,7 +126,7 @@
               <div class="time-links">
                 <ul>
                   <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
-                  <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
+                  <li><a href="#" class="stopwatch-link active">Stopwatch </a></li>
                   <li><a href="#" class="settings-link">Settings </a></li>
                 </ul>
               </div>
@@ -186,7 +186,7 @@
                 <ul>
                   <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
                   <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
-                  <li><a href="#" class="settings-link">Settings </a></li>
+                  <li><a href="#" class="settings-link active">Settings </a></li>
                 </ul>
               </div>
             </div>
