--- a/public/pages/flashcard/flashcard.html
+++ b/public/pages/flashcard/flashcard.html
@@ -6,13 +6,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
+    <!--Bootstrap CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link href="../../scss/layout.scss" rel="stylesheet" type="text/css" />
+    <!--Custom CSS-->
+    <link href="../../scss/layout.scss" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
@@ -162,6 +164,7 @@
     </main>
 
     <script src="flashcard.js" type="module"></script>
+    <!--Bootstrap JS-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
