--- a/public/pages/workspace/workspace.html
+++ b/public/pages/workspace/workspace.html
@@ -7,10 +7,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+  
+  <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
+  <!--Custom CSS for Time features and In-Progress column-->
   <link href="../../scss/layout.scss" rel="stylesheet" type="text/css" />
+  
+  <!--Custom CSS for musicplayer-->
   <link rel="stylesheet" type="text/css" href="../../scss/components/musicplayer.scss" />
+
+  <!--Icons for Musicplayer-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
 </head>
 
@@ -93,8 +101,8 @@
               <!--Start, Stop & Reset Buttons-->
               <div class="pomodoro-buttons">
                 <button class="btn btn-primary" id="pomodoro-start">Start</button>
-                <button class="btn btn-secondary" id="pomodoro-stop">Stop</button>
-                <button class="btn btn-secondary" id="pomodoro-reset">Reset</button>
+                <button class="btn btn-danger" id="pomodoro-stop">Stop</button>
+                <button class="btn btn-outline-warning" id="pomodoro-reset">Reset</button>
               </div>
               <div class="number-of-sessions">
                   <span id="current-session">1</span> 
@@ -105,9 +113,9 @@
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link active">Pomodoro</a></li>
-                  <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
-                  <li><a href="#" class="settings-link">Settings </a></li>
+                  <li><img src="../../images/SelectedPomodoro.png" alt=""><a href="#" class="pomodoro-link active">Pomodoro</a></li>
+                  <li><img src="../../images/Stopwatch.png" alt=""><a href="#" class="stopwatch-link">Stopwatch </a></li>
+                  <li><img src="../../images/Settings.png" alt=""><a href="#" class="settings-link">Settings </a></li>
                 </ul>
               </div>
             </div>
@@ -119,15 +127,15 @@
               <!--Stopwatch Buttons -->
               <div class="stopwatch-buttons">
                 <button class="btn btn-primary" id="stopwatch-start">Start</button>
-                <button class="btn btn-secondary" id="stopwatch-stop">Stop</button>
+                <button class="btn btn-danger" id="stopwatch-stop">Stop</button>
                 <button class ="btn btn-outline-warning" id="stopwatch-reset">Reset</button>
               </div>
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
-                  <li><a href="#" class="stopwatch-link active">Stopwatch </a></li>
-                  <li><a href="#" class="settings-link">Settings </a></li>
+                  <li><img src="../../images/Pomodoro.png" alt=""><a href="#" class="pomodoro-link">Pomodoro</a></li>
+                  <li><img src="../../images/SelectedStopwatch.png" alt=""><a href="#" class="stopwatch-link active">Stopwatch </a></li>
+                  <li><img src="../../images/Settings.png" alt=""><a href="#" class="settings-link">Settings </a></li>
                 </ul>
               </div>
             </div>
@@ -184,9 +192,9 @@
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><a href="#" class="pomodoro-link">Pomodoro</a></li>
-                  <li><a href="#" class="stopwatch-link">Stopwatch </a></li>
-                  <li><a href="#" class="settings-link active">Settings </a></li>
+                  <li><img src="../../images/Pomodoro.png" alt=""><a href="#" class="pomodoro-link ">Pomodoro</a></li>
+                  <li><img src="../../images/Stopwatch.png" alt=""><a href="#" class="stopwatch-link">Stopwatch </a></li>
+                  <li><img src="../../images/SelectedSettings.png" alt=""><a href="#" class="settings-link active">Settings </a></li>
                 </ul>
               </div>
             </div>
@@ -253,7 +261,9 @@
 
   <script src="../kanban/kanban.js" type="module"></script>
   <script src="workspace.js"></script>
+  <!--Musicplayer JS -->
   <script src="./musicplayer.js"></script>
+  <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
