--- a/public/pages/workspace/workspace.html
+++ b/public/pages/workspace/workspace.html
@@ -6,14 +6,16 @@
   <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
+  <meta name="description" content="Study app for law students" />
+  <meta name="keywords" content="task management, time management, content management, study">
+  <meta name="author" content="Susanna Pang">
   
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
   <!--Custom CSS for Time features and In-Progress column-->
-  <link href="../../scss/layout.scss" rel="stylesheet" type="text/css" />
+  <link href="../../scss/main.scss" rel="stylesheet" type="text/css" />
   
   <!--Custom CSS for musicplayer-->
   <link rel="stylesheet" type="text/css" href="../../scss/components/musicplayer.scss" />
@@ -26,9 +28,9 @@
   <!--SideBar-->
   <nav class="sidenav">
     <ul>
-      <li><a href="../../index.html"><img src="../../images/KanbanboardIcon.png" alt=""></a></li>
-      <li><a href="workspace.html"><img src="../../images/SelectedWorkspaceIcon.png" alt=""></a></li>
-      <li><a href="../flashcard/flashcard.html"><img src="../../images/FlashcardIcon.png" alt=""></a></li>
+      <li><a href="../../index.html"><img src="../../images/KanbanboardIcon.png" alt="kanban icon"></a></li>
+      <li><a href="workspace.html"><img src="../../images/SelectedWorkspaceIcon.png" alt="workspace icon"></a></li>
+      <li><a href="../flashcard/flashcard.html"><img src="../../images/FlashcardIcon.png" alt="flashcard icon"></a></li>
     </ul>
   </nav>
   <header class="page-heading">
@@ -51,7 +53,7 @@
                   <!-- Taskname and delete button-->
                   <div class="taskcard-heading">
                     <p><strong class="task-name">Task Name</strong></p>
-                    <button class="delete-taskcard-btn" id="delete-task"><img src="/public/images/bin.png" alt=""></button>
+                    <button class="delete-taskcard-btn" id="delete-task"><img src="/public/images/bin.png" alt="grey bin icon"></button>
                   </div>
                   <!--Class tag and Priority-->
                   <div class="content-information">
@@ -100,7 +102,7 @@
               </div>
               <!--Start, Stop & Reset Buttons-->
               <div class="pomodoro-buttons">
-                <button class="btn btn-primary" id="pomodoro-start">Start</button>
+                <button class="btn btn-primary blue" id="pomodoro-start">Start</button>
                 <button class="btn btn-danger" id="pomodoro-stop">Stop</button>
                 <button class="btn btn-outline-warning" id="pomodoro-reset">Reset</button>
               </div>
@@ -113,9 +115,9 @@
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><img src="../../images/SelectedPomodoro.png" alt=""><a href="#" class="pomodoro-link active">Pomodoro</a></li>
-                  <li><img src="../../images/Stopwatch.png" alt=""><a href="#" class="stopwatch-link">Stopwatch </a></li>
-                  <li><img src="../../images/Settings.png" alt=""><a href="#" class="settings-link">Settings </a></li>
+                  <li><img src="../../images/SelectedPomodoro.png" alt="pomodoro timer icon"><a href="#" class="pomodoro-link active">Pomodoro</a></li>
+                  <li><img src="../../images/Stopwatch.png" alt="stopwatch icon"><a href="#" class="stopwatch-link">Stopwatch </a></li>
+                  <li><img src="../../images/Settings.png" alt="settings icon"><a href="#" class="settings-link">Settings </a></li>
                 </ul>
               </div>
             </div>
@@ -126,16 +128,16 @@
               <h2 class="stopwatch-display"><span id="stopwatch-minutes">00</span>:<span id="stopwatch-seconds">00</span>:<span id="stopwatch-tens">00</span></h2>
               <!--Stopwatch Buttons -->
               <div class="stopwatch-buttons">
-                <button class="btn btn-primary" id="stopwatch-start">Start</button>
+                <button class="btn btn-primary blue" id="stopwatch-start">Start</button>
                 <button class="btn btn-danger" id="stopwatch-stop">Stop</button>
                 <button class ="btn btn-outline-warning" id="stopwatch-reset">Reset</button>
               </div>
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><img src="../../images/Pomodoro.png" alt=""><a href="#" class="pomodoro-link">Pomodoro</a></li>
-                  <li><img src="../../images/SelectedStopwatch.png" alt=""><a href="#" class="stopwatch-link active">Stopwatch </a></li>
-                  <li><img src="../../images/Settings.png" alt=""><a href="#" class="settings-link">Settings </a></li>
+                  <li><img src="../../images/Pomodoro.png" alt="pomodoro timer icon"><a href="#" class="pomodoro-link">Pomodoro</a></li>
+                  <li><img src="../../images/SelectedStopwatch.png" alt="stopwatch icon"><a href="#" class="stopwatch-link active">Stopwatch </a></li>
+                  <li><img src="../../images/Settings.png" alt="settings icon"><a href="#" class="settings-link">Settings </a></li>
                 </ul>
               </div>
             </div>
@@ -192,15 +194,16 @@
               <!--Navigation Links -->
               <div class="time-links">
                 <ul>
-                  <li><img src="../../images/Pomodoro.png" alt=""><a href="#" class="pomodoro-link ">Pomodoro</a></li>
-                  <li><img src="../../images/Stopwatch.png" alt=""><a href="#" class="stopwatch-link">Stopwatch </a></li>
-                  <li><img src="../../images/SelectedSettings.png" alt=""><a href="#" class="settings-link active">Settings </a></li>
+                  <li><img src="../../images/Pomodoro.png" alt="pomodoro timer icon"><a href="#" class="pomodoro-link ">Pomodoro</a></li>
+                  <li><img src="../../images/Stopwatch.png" alt="stopwatch icon"><a href="#" class="stopwatch-link">Stopwatch </a></li>
+                  <li><img src="../../images/SelectedSettings.png" alt="settings icon"><a href="#" class="settings-link active">Settings </a></li>
                 </ul>
               </div>
             </div>
           </div>
           
           <!--Music Player -->
+          <!--Based off tutorial: https://www.geeksforgeeks.org/create-a-music-player-using-javascript/ (sayantanm19, 2022)-->
           <div class="box box-border">
             <div class="music-player">
               <!--Current Song Playing-->
